<resources>
    <string name="app_name">PrenosRobeTest</string>
    <string name="SignIn">SIGN IN</string>
    <string name="username">Korisnicko ime</string>
    <string name="password">Lozinka</string>
    <string name="SignUp">SIGN UP</string>
    <string name="name">Ime</string>
    <string name="Surname">Prezime</string>
    <string name="Email">E-mail</string>
    <string name="Phone">Telefon</string>
    <string name="Info">Dodatne informacije</string>
</resources>
