<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.toshiba.prenosrobetest.RegistracijaActivity">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|start"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/labelName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelSurname"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal|start"
        android:text="@string/Surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/labelSurname"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start"
        android:text="@string/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSurname" />

    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start"
        android:text="@string/Phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/labelUsername"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPhone" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|start"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelUsername" />

    <TextView
        android:id="@+id/labelInfo"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal|center|start"
        android:text="@string/Info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputSurname" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/labelPhone"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputUsername2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/labelUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputPhone" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/labelPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername2" />

    <EditText
        android:id="@+id/inputInfo"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/labelInfo"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword2" />

    <Button
        android:id="@+id/buttonSignUp2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputInfo" />

    <TextView
        android:id="@+id/labelMessageA"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputInfo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="25sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp2" />

</android.support.constraint.ConstraintLayout>
